@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Correct one pass query problems and OGC filter query (#3305)
+
 - Fixed msMSSQL2008CloseConnection() to free the statement handle properly (#3244)
 
 - Fixed the query handling with the MSSQL2008 driver (#3058)
